# scrapping-colombian-newspapers

./: .flake8  .travis.yml  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  travis.yml
.github/workflows/: actions_ci.yml  main.yml  python-application.yml
resources/: analyse.py  get.py
scrap/: __init__.py  main.py  setup_log.conf
scrap/logs/: logging.ini  setup_log.ini
scrap/resources/: get.py  validator.py
scrap/tests/: test_resources_get.py  test_responses.py  test_sites_response.py
scrapproject/: main.py
scrapproject/resources/: analyse.py  get.py
scrapproject/tests/: test_resources_get.py
